# princess-journey

./: .gitignore  Dockerfile  README.md  build.sh  pubspec.yaml
.github/workflows/: build.yml  release.yml
android/app/: build.gradle  build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/princess_journey/: MainActivity.kt
android/app/src/main/kotlin/fr/ninico/princess_journey/: MainActivity.kt
android/app/src/main/res/values/: colors.xml
android/app/src/profile/: AndroidManifest.xml
backend/: .gitignore  Cargo.toml
backend/db/migrations/1.0.0/: down.sql  up.sql
backend/src/: app.rs  errors.rs  main.rs  schema.rs  tester.rs  tests.rs
backend/src/models/: crud.rs  fasting_period.rs  mod.rs  user.rs  user_tests.rs  water_intake.rs  weight.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: globals.dart  i18n.dart  main.dart
lib/components/: achievements.dart  mermaid.dart  princess.dart  users_dropdown.dart  water_intakes_chart.dart  weight_chart.dart
lib/models/: preferences.dart  user.dart
lib/screens/: home.dart  journey.dart  you.dart
test/: mermaid_test.dart  path_provider_mock.dart  princess_test.dart  user_test.dart  you_test.dart
web/: index.html  manifest.json
