[package]
name = "princess_journey"
version = "1.0.0"
authors = ["Nicolas Pernoud <github@ninico.fr>"]
edition = "2024"

[dependencies]
actix-web = "4.10.2"
diesel = { version = "2.2.9", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.8"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libsqlite3-sys = { version = "0.32.0", features = ["bundled"] }
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web-httpauth = "0.8.2"
rand = "0.9.0"
log = "0.4.27"

[dev-dependencies]
actix-rt = "2.10.0"
regex = "1.11.1"
