[package]
name = "princess_journey"
version = "1.0.0"
authors = ["Nicolas Pernoud <github@ninico.fr>"]
edition = "2024"

[dependencies]
actix-web = "4.12.1"
diesel = { version = "2.3.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.3.1"
env_logger = "0.11.8"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
actix-cors = "0.7.1"
actix-files = "0.6.9"
actix-web-httpauth = "0.8.2"
rand = "0.9.2"
log = "0.4.29"

[dev-dependencies]
actix-rt = "2.11.0"
regex = "1.12.2"
